--- a/neihan/AndroidManifest.xml
+++ b/neihan/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -15,6 +16,10 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.jt.neihan.MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.jt.test.TestActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
